:adhesive_bandage: Fixed upload/download (poorly)
Everything is working as of now.
TODO:
## Firestore
- [ ] Change entire data model to optimize for queries of sizes by week/month/year
- [ ] Add caching for data to prevent frequent reloads
- [ ] Add security so users are the only ones who have access to their data
## Login Page
- [ ] Check if already logged in after a moment
## Dashboard
- [ ] Display hours loaded in the calendar
- [ ] Highlight days with little/no hours
- [ ] Make it so hours are restricted between 0-24
- [ ] Make it not look hideous
## Admin Page
- [ ] Make one
- [ ] Add admin security privileges

--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -14,6 +14,7 @@
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background-color: #fff;
+    margin-bottom: 20%;
   }
   
   .login-title {
